--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <!-- = = = = = BOXICONS = = = = = -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"> -->
+     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
      <!-- = = = = = UNICONS = = = = = -->
-      <link rel="stylesheet" href="https://unicons.iconsout.com/release/v4.0.0/css/line.css">
+      <!-- <link rel="stylesheet" href="https://unicons.iconsout.com/release/v4.0.0/css/line.css"> -->
+       <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.2.0/css/line.css">
    
     <title>Vishnu's Portfolio</title>
   </head>
