--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,10 @@
       <!-- <link rel="stylesheet" href="https://unicons.iconsout.com/release/v4.0.0/css/line.css"> -->
        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.2.0/css/line.css">
    
+       <!-- = = = = =  FontAwesome = = = = =  -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+
     <title>Vishnu's Portfolio</title>
   </head>
   <body>
